# shello

./: CHANGELOG.md  LICENSE  README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
debian/: changelog.in  control
shello/: __init__.py  decorators.py  exceptions.py  helpers.py  pipeline.py  process.py  shell.py  types.py
tests/: test_generic_exitcodes.py  test_pipeline.py  test_pipeline_state.py  test_process.py  test_shell.py  test_state_machine.py
