[project]
name = "shello"
version = "0.1.0"
description = "A modern Python library for shell-style process execution"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Kostiantyn Zakharov", email = "kszakharov@gmail.com" },
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=shello",
    "--cov-report=term:skip-covered",
    "--cov-report=html",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
]
